sintaxis/src/main/java/tpiParser.java
// Generated from C:/Users/MPi5/Desktop/sintaxis/src/main/Antlr4\tpi.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tpiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ACCION=2, ES=3, FINACCION=4, AMBIENTE=5, PROCESO=6, TIPODEDATO=7, 
		MIENTRAS=8, HACER=9, FINMIENTRAS=10, HASTAQUE=11, REPETIR=12, SI=13, ENTONCES=14, 
		SINO=15, FINSI=16, PARA=17, HASTA=18, FINPARA=19, SEGUN=20, DEFECTO=21, 
		FINSEGUN=22, CADENA=23, ESCRIBIR=24, LEER=25, IGUAL=26, DPUNTOS=27, SEMI=28, 
		MENOS=29, MAS=30, OR=31, MULTI=32, DIVENT=33, DIV=34, MOD=35, AND=36, 
		POT=37, NOTL=38, PAR=39, IPAR=40, DESIGUAL=41, MENORA=42, MAYORA=43, MENOROI=44, 
		MAYOROI=45, COMA=46, REAL=47, NUMEROENTERO=48, ASIGNACION=49, ASGINACIONINC=50, 
		BOOL=51, IDENTIFICADOR=52, TXT=53, WHITESPACE=54, NEWLINE=55, COMENTARIO1=56, 
		COMENTARIO2=57;
	public static final int
		RULE_start = 0, RULE_programa = 1, RULE_titulo = 2, RULE_cuerpo = 3, RULE_ambiente = 4, 
		RULE_lineaambiente = 5, RULE_variable = 6, RULE_constante = 7, RULE_proceso = 8, 
		RULE_lineacod = 9, RULE_asignacion = 10, RULE_asignacioninc = 11, RULE_sentencias = 12, 
		RULE_condicional = 13, RULE_iterativas = 14, RULE_lineasegun = 15, RULE_funcion = 16, 
		RULE_arg = 17, RULE_expresion = 18, RULE_siexpresion = 19, RULE_factor = 20, 
		RULE_termino = 21, RULE_hoja = 22, RULE_dato = 23, RULE_operadorrelacional = 24, 
		RULE_addoperador = 25, RULE_multioperador = 26, RULE_numero = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "programa", "titulo", "cuerpo", "ambiente", "lineaambiente", 
			"variable", "constante", "proceso", "lineacod", "asignacion", "asignacioninc", 
			"sentencias", "condicional", "iterativas", "lineasegun", "funcion", "arg", 
			"expresion", "siexpresion", "factor", "termino", "hoja", "dato", "operadorrelacional", 
			"addoperador", "multioperador", "numero"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'='", "':'", "';'", "'-'", "'+'", null, "'*'", "'/'", null, 
			null, null, "'**'", "'_no'", "'('", "')'", "'<>'", "'<'", "'>'", "'<='", 
			"'>='", null, null, null, "':='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ACCION", "ES", "FINACCION", "AMBIENTE", "PROCESO", "TIPODEDATO", 
			"MIENTRAS", "HACER", "FINMIENTRAS", "HASTAQUE", "REPETIR", "SI", "ENTONCES", 
			"SINO", "FINSI", "PARA", "HASTA", "FINPARA", "SEGUN", "DEFECTO", "FINSEGUN", 
			"CADENA", "ESCRIBIR", "LEER", "IGUAL", "DPUNTOS", "SEMI", "MENOS", "MAS", 
			"OR", "MULTI", "DIVENT", "DIV", "MOD", "AND", "POT", "NOTL", "PAR", "IPAR", 
			"DESIGUAL", "MENORA", "MAYORA", "MENOROI", "MAYOROI", "COMA", "REAL", 
			"NUMEROENTERO", "ASIGNACION", "ASGINACIONINC", "BOOL", "IDENTIFICADOR", 
			"TXT", "WHITESPACE", "NEWLINE", "COMENTARIO1", "COMENTARIO2"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tpi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tpiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public List<String> var = new ArrayList<String>();
		public List<String> no_var = new ArrayList<String>();
		public ProgramaContext programa() {
			return getRuleContext(ProgramaContext.class,0);
		}
		public TerminalNode EOF() { return getToken(tpiParser.EOF, 0); }
		public TerminalNode NEWLINE() { return getToken(tpiParser.NEWLINE, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			programa();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(57);
				match(NEWLINE);
				}
			}

			setState(60);
			match(EOF);
			System.out.println("================");
				 System.out.println("Variables: "+_localctx.var);
				 System.out.println("Constantes: "+_localctx.no_var);
				 System.out.println("================");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TituloContext titulo() {
			return getRuleContext(TituloContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(tpiParser.NEWLINE, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public TerminalNode FINACCION() { return getToken(tpiParser.FINACCION, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			titulo();
			setState(64);
			match(NEWLINE);
			setState(65);
			cuerpo();
			setState(66);
			match(FINACCION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TituloContext extends ParserRuleContext {
		public Token IDENTIFICADOR;
		public TerminalNode ACCION() { return getToken(tpiParser.ACCION, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(tpiParser.IDENTIFICADOR, 0); }
		public TerminalNode ES() { return getToken(tpiParser.ES, 0); }
		public TituloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterTitulo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitTitulo(this);
		}
	}

	public final TituloContext titulo() throws RecognitionException {
		TituloContext _localctx = new TituloContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_titulo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(ACCION);
			setState(69);
			((TituloContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
			setState(70);
			match(ES);

			      ((StartContext)getInvokingContext(0)).no_var.add((((TituloContext)_localctx).IDENTIFICADOR!=null?((TituloContext)_localctx).IDENTIFICADOR.getText():null));
			   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpoContext extends ParserRuleContext {
		public AmbienteContext ambiente() {
			return getRuleContext(AmbienteContext.class,0);
		}
		public ProcesoContext proceso() {
			return getRuleContext(ProcesoContext.class,0);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterCuerpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitCuerpo(this);
		}
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cuerpo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			ambiente();
			setState(74);
			proceso();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AmbienteContext extends ParserRuleContext {
		public TerminalNode AMBIENTE() { return getToken(tpiParser.AMBIENTE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(tpiParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(tpiParser.NEWLINE, i);
		}
		public LineaambienteContext lineaambiente() {
			return getRuleContext(LineaambienteContext.class,0);
		}
		public AmbienteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ambiente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterAmbiente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitAmbiente(this);
		}
	}

	public final AmbienteContext ambiente() throws RecognitionException {
		AmbienteContext _localctx = new AmbienteContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ambiente);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(AMBIENTE);
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				match(NEWLINE);
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFICADOR) {
				{
				setState(82);
				lineaambiente();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineaambienteContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ConstanteContext constante() {
			return getRuleContext(ConstanteContext.class,0);
		}
		public LineaambienteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineaambiente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterLineaambiente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitLineaambiente(this);
		}
	}

	public final LineaambienteContext lineaambiente() throws RecognitionException {
		LineaambienteContext _localctx = new LineaambienteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lineaambiente);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				variable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				constante();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode DPUNTOS() { return getToken(tpiParser.DPUNTOS, 0); }
		public TerminalNode TIPODEDATO() { return getToken(tpiParser.TIPODEDATO, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(tpiParser.IDENTIFICADOR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(tpiParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(tpiParser.NEWLINE, i);
		}
		public LineaambienteContext lineaambiente() {
			return getRuleContext(LineaambienteContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			((VariableContext)_localctx).ID = match(IDENTIFICADOR);
			setState(90);
			match(DPUNTOS);
			setState(91);
			match(TIPODEDATO);
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(92);
				match(NEWLINE);
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFICADOR) {
				{
				setState(97);
				lineaambiente();
				}
			}


			   String aux1 = Integer.toString((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getCharPositionInLine():0));
			   String aux2 = Integer.toString((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getLine():0));
			   if ( (!((StartContext)getInvokingContext(0)).var.contains((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null))) & (!((StartContext)getInvokingContext(0)).no_var.contains((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null))) ) {
			      ((StartContext)getInvokingContext(0)).var.add((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null));
			   } else {
			      System.err.println("Variable ya definida: "+(((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null) + " <"+ aux2 + "," + aux1 + ">");
			   };
			   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstanteContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode IGUAL() { return getToken(tpiParser.IGUAL, 0); }
		public TerminoContext termino() {
			return getRuleContext(TerminoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(tpiParser.IDENTIFICADOR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(tpiParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(tpiParser.NEWLINE, i);
		}
		public LineaambienteContext lineaambiente() {
			return getRuleContext(LineaambienteContext.class,0);
		}
		public ConstanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constante; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitConstante(this);
		}
	}

	public final ConstanteContext constante() throws RecognitionException {
		ConstanteContext _localctx = new ConstanteContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constante);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			((ConstanteContext)_localctx).ID = match(IDENTIFICADOR);
			setState(103);
			match(IGUAL);
			setState(104);
			termino();
			setState(106); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(105);
				match(NEWLINE);
				}
				}
				setState(108); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFICADOR) {
				{
				setState(110);
				lineaambiente();
				}
			}


			   String aux1 = Integer.toString((((ConstanteContext)_localctx).ID!=null?((ConstanteContext)_localctx).ID.getCharPositionInLine():0));
			   String aux2 = Integer.toString((((ConstanteContext)_localctx).ID!=null?((ConstanteContext)_localctx).ID.getLine():0));
			   if ( (!((StartContext)getInvokingContext(0)).var.contains((((ConstanteContext)_localctx).ID!=null?((ConstanteContext)_localctx).ID.getText():null))) & (!((StartContext)getInvokingContext(0)).no_var.contains((((ConstanteContext)_localctx).ID!=null?((ConstanteContext)_localctx).ID.getText():null))) ) {
			      ((StartContext)getInvokingContext(0)).no_var.add((((ConstanteContext)_localctx).ID!=null?((ConstanteContext)_localctx).ID.getText():null));
			   } else {
			      System.err.println("Variable ya definida: "+(((ConstanteContext)_localctx).ID!=null?((ConstanteContext)_localctx).ID.getText():null)+ " <"+ aux2 + "," + aux1 + ">");
			   };
			   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcesoContext extends ParserRuleContext {
		public TerminalNode PROCESO() { return getToken(tpiParser.PROCESO, 0); }
		public TerminalNode NEWLINE() { return getToken(tpiParser.NEWLINE, 0); }
		public LineacodContext lineacod() {
			return getRuleContext(LineacodContext.class,0);
		}
		public ProcesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proceso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterProceso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitProceso(this);
		}
	}

	public final ProcesoContext proceso() throws RecognitionException {
		ProcesoContext _localctx = new ProcesoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_proceso);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(PROCESO);
			setState(116);
			match(NEWLINE);
			setState(117);
			lineacod();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineacodContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(tpiParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(tpiParser.NEWLINE, i);
		}
		public LineacodContext lineacod() {
			return getRuleContext(LineacodContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public AsignacionincContext asignacioninc() {
			return getRuleContext(AsignacionincContext.class,0);
		}
		public LineacodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineacod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).enterLineacod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpiListener ) ((tpiListener)listener).exitLineacod(this);
		}
	}

	public final LineacodContext lineacod() throws RecognitionException {
		LineacodContext _localctx = new LineacodContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lineacod);
		int _la;
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
